--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -631,10 +632,11 @@ footer {
   /* background-color:  rgba(255, 255, 255, 0.5); */
   position: absolute;
   top: 5px;
-  left: 60px;
+  left: 2.5rem;
   align-self: flex-start;
   z-index: 10;
-
+  width: 35px;
+  height: 30px;
   color: white;
   cursor: pointer;
   margin-top: 0;
@@ -642,6 +644,314 @@ footer {
 .logo > p {
   margin-top: 0;
 }
+.layer3navbarlinks{
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+.checkContainer{
+  background-color: #ECF0F5;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  
+}
+.changeContainerWidth{
+  background-color: #ECF0F5;
+  display: grid;
+  grid-template-columns: 5% 90%;
+  margin: 0px;
+  
+}
+.checkSide{
+  
+  width: 40px;
+  background-color: black;
+  height: 100%;
+  top: 0;
+  padding-top: 20px;
+  
+  
+}
+.checkSide2{
+  
+  background-color: black;
+  height: 100%;
+  align-self: stretch;
+ margin-left: 0;
+  color: #fff;
+  padding: 20px 20px;
+
+ 
+}
+.check {
+ 
+  display: flex;
+  flex-wrap: wrap;
+  /* height: 1200px; */
+  width: 98%;
+  margin: 0;
+  flex-direction: column;
+  
+}
+.checkt{
+  display: flex;
+  flex-wrap: wrap;
+  /* width: 98%;
+  margin-top: 1%; */
+}
+.icon-toggle {
+  margin-left: 9.2rem;
+}
+.layout-top{
+  margin-left: 1rem;
+  display: flex; 
+  margin-top: 0.5rem;
+}
+.likesContainer, .starContainer, .completeTripContainer, .cancelTripContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 85px;
+  width: 90px;
+  background-color: #00C0EF;
+  /* text-align: center; */
+  
+}
+.likes, .cancelTrip, .completeTrip{
+  font-size: 40px;
+}
+.star{
+  font-size: 20px;
+}
+.checkHead {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  height: 85px;
+  width: 98%;
+  margin: 1%;
+
+}
+.checkHeadText, .ratingText, .completeTripText, .cancelTripText{
+  margin-left: 10px;
+}
+.checkBodyContainer{
+  display: flex;
+  width: 98%;
+  margin: 1%;
+}
+.checkBody {
+  width: 48%;
+  height: 400px;
+  padding: 10px;
+  background-color: rgb(117, 115, 124);
+  margin-top: 1.3%;
+  margin-right: 2%;
+
+}
+
+.checkBodyContent{
+  border: 1px solid black;
+}
+.checkB {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 50px;
+  background-color: blue;
+  margin: 10px;
+  border: 1px solid black;
+}
+.topHead{
+  display: flex;
+  margin-top: 5px;
+}
+.secondTopSection{
+  width: 50%;
+  display: flex;
+}
+.checkt{
+  width: 50%;
+}
+.topHeadInner{
+  width: 50%;
+  
+}
+.headContainer{
+  width: 100%;
+}
+.toggleBar{
+  margin-left: 10px;
+  font-size: 22px;
+}
+.picture{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin-bottom: 0;
+  margin-left: 2px;
+}
+
+.settings{
+  font-size: 25px;
+  margin-left: 5px;
+  margin-top: 30px;
+  color: #fff;
+}
+.sidePic{
+  width: 25px;
+  height: 25px;
+  margin-top: 10px;
+}
+.sidePic2{
+  width: 50px;
+  height: 50px;
+ margin-right: 10px;
+}
+.imgContainer{
+  display: flex;
+}
+.online{
+  height: 10px;
+  width: 10px;
+  background-color: green;
+  margin-right: 5px;
+  border-radius: 50%;
+  margin-top: 5px;
+}
+
+.chartContainer{
+  position: relative;
+  width: 100%;
+  
+  height: 415px;
+  overflow: scroll;
+  
+  background-color: #fff;
+  /* top: 50%; */
+  /* left: 50%; */
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+  /* transform: translate(-50%, -50%); */
+}
+.chartContainer > h1{
+  margin: 1rem;
+ 
+}
+.chart{
+  width: 48%;
+  /* margin: 1%; */
+  padding-top: 1rem;
+}
+.tripChartBox{
+  box-sizing: border-box;
+  width: 100%;
+  margin: 20px 0;
+} 
+.tripChartBox p{
+  
+  margin: 0 0.5rem;
+  font-weight: bold;
+  padding: 0;
+}
+.tripChartBox p:nth-child(2){
+ 
+  float: right;
+  position: relative;
+  top: -30px;
+}
+.tripChart{
+  box-sizing: border-box; 
+  width: 100%;
+  /* margin: 20px 0; */
+  background-color: #262626;
+  padding: 2px;
+  border: 1px solid #0fffb7;
+  border-radius: 2px;
+  margin: 0.5rem;
+}
+.tripChartLevel{
+  background-color: #00C0EF;
+  /* width: 90%; */
+  height: 3px;
+  
+}
+.layoutThreeContainer{
+  background-color: #3C8DBC;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  
+  
+  justify-content: space-evenly;
+}
+.card-container{
+  background-color: #e5e5e5;
+  width: 90%;
+  height: 96%;
+/* margin-left: 67px; */
+/* margin-right: 5%; */
+margin: 5% 1%;
+display: inline-block;
+box-sizing: border-box;
+  
+}
+.card-container-inner{
+  background-color: #fff;
+  width: 86%;
+  height: 75%;
+  margin-left: 7%;
+  margin-top: 23%;
+  border-radius: 5px;
+}
+.card-picture-container{
+  display: inline-block;
+  width: 40%;
+  height: 40%;
+  margin-left: 30%;
+  margin-top: -100px;
+
+}
+.card-picture{
+  border-radius: 50%;
+  height: 100%;
+  width: 90%;
+  background-color: #f0f0f0;
+  margin-left: 5%;
+}
+.card-button-container{
+  display: flex;
+  justify-content: center;
+}
+.card-button{
+  padding: 10px 15px;
+  background-color: green;
+  color: #fff;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+}
+.card-button:disabled{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+.card-button2{
+  background-color: red;
+  margin-left: 10px;
+}
+.card-name{
+  text-align: center;
+}
+.card-info{
+  margin-left: 10px;
+}
+
+  
+
+
 @media screen and (max-width: 1035px) {
   .messageBody {
     /* width: 220px; */
@@ -658,25 +968,26 @@ footer {
   .dashboardThirdDiv {
     display: none;
   }
-  .dashboardContainer{
+  .dashboardContainer {
     grid-template-columns: 18% 76% 10%;
   }
-
+  
+  
   .notification {
     width: 100vw;
   }
-  
+
   .messageContent {
     display: block;
     margin-left: 15px;
     width: 100vw;
   }
-  
+
   .messageBody {
     margin: 1px 0px;
     width: 240px;
   }
-  .space{
+  .space {
     margin-top: 40px;
   }
   .Fabar {
@@ -693,10 +1004,10 @@ footer {
     color: black;
     z-index: 999;
   }
-  
-  .diplay{
+
+  .diplay {
     left: 2px;
-    top: 25%
+    top: 25%;
   }
   .cardContainer {
     display: block;
@@ -708,6 +1019,149 @@ footer {
   }
   .flip-card {
     width: 100vw;
+  }
+  .checkBody{
+    width: 98%;
+    margin: 1%;
+    margin-top: 2%;
+  }
+  .checkBodyContainer{
+    flex-direction: column;
+  }
+  .checkContainer{
+    background-color: #ECF0F5;
+    display: flex;
+    
+  }
+  .topHead{
+    flex-direction: column;
+  }
+  .topHeadInner{
+    width: 100%;
+    
+  }
+  .secondTopSection{
+    width: 98%;
+    margin: 0.1% 1%;
+  }
+  .headContainer{
+    width: 98%;
+    margin: 1.4%;
+  }
+  .checkHead{
+    margin: 0 1%;
+  }
+  .checkt{
+    margin: 1%;
+  }
+  .chartContainer{
+    margin: 2%;
+  }
+  
+  .checkSide2{
+   position: absolute;
+   z-index: 999;
+  }
+  .chart{
+    width: 98%;
+  }
+  .checksideContainer{
+    position:relative;
+    z-index: 999;
+    bottom: 0;
+  }
+  .icon-toggle {
+    margin-left: 3.6rem;
+  }
+  .card-container{
+    background-color: #e5e5e5;
+    width: 95%;
+    height: 95%;
+  /* margin-left: 67px; */
+  /* margin-right: 5%; */
+  margin: 5% 2%;
+  display: inline-block;
+  box-sizing: border-box;
+    
+  }
+}
+@media screen and (max-width: 414px) {
+  .icon-toggle {
+    margin-left: 3.2rem;
+  }
+  
+  .checkt{
+    margin: 0;
+    width: 100%;
+  }
+  .checkBody{
+    width: 94%;
+    margin-top: 3%;
+   
+  }
+  .headContainer{
+    width: 100%;
+  }
+  .topHeadInner{
+    width: 100%;
+  }
+  
+  .checkSide{
+    display: none;
+  }
+.checkSide2{
+  height: 100%;
+}
+.checkHead{
+  margin: 1%;
+}
+  .secondTopSection, .headContainer{
+    flex-direction: column;
+  }
+  .headContainer{
+    width: 96%;
+    margin: 0.5% 2%;
+  }
+  .chartContainer{
+    width: 98%;
+    margin: 1%;
+  }
+  .checkBodyContainer{
+    width: 96%;
+  }
+  .chart, .chartContainer{
+    width: 98%;
+   
+  }
+  .card-container{
+    background-color: #e5e5e5;
+    width: 95%;
+    height: 98%;
+  /* margin-left: 67px; */
+  /* margin-right: 5%; */
+  margin: 5% 1%;
+  display: inline-block;
+  box-sizing: border-box;
+    
+  }
+  .card-container-inner{
+   
+    width: 86%;
+    height: 82%;
+    margin-left: 7%;
+    margin-top: 15%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  .card-info{
+    margin-top: 2px;
+  }
+  .card-picture{
+    width: 70px;
+    height: 70px;
+  }
+  .card-picture-container{
+    height: 20%;
   }
 }
 
